--- a/roles.html
+++ b/roles.html
@@ -3,103 +3,619 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MAF ROLES</title>
-
 	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-
 	<link rel="stylesheet" href="../assets/font-akrobat/css.css">
 	<link rel="stylesheet" href="../assets/roles-flex.css">
-	<link rel="stylesheet" href="//libs.cdnjs.net/font-awesome/5.15.4/css/all.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/7.2.96/css/materialdesignicons.min.css">
 	<link rel="stylesheet" href="./styles-roles.css">
+	<link rel="stylesheet" href="https://fonts.cdnfonts.com/css/gilroy-bold">
+	<style>
+		:root {
+			--maf-panel-glow: 0 0 18px 4px #ae8cff44, 0 0 1px 0px #31225c, 0 2px 8px #0003;
+			--maf-panel-border: linear-gradient(120deg,#ae8cff,#5b3e9c 60%,#ede7f6 100%);
+			--maf-panel-bg-dark: #191420e6;
+			--maf-panel-bg-dark2: #221a2b;
+			--maf-panel-radius: 18px;
+			--maf-panel-padding: 9px 18px;
+			--maf-panel-shadow: 0 0 12px 2px #ae8cff40, 0 2px 10px #0002;
+			--maf-panel-border-width: 2.2px;
+			--maf-panel-fadein: mafFadeIn 0.65s cubic-bezier(.6,0,.3,1);
+			--maf-panel-fadeout: mafFadeOut 0.5s cubic-bezier(.6,0,.3,1);
+		}
+		html, body {
+			font-family: 'Gilroy', 'Gilroy-Bold', 'Gilroy-Medium', 'Gilroy-Regular', Arial, sans-serif !important;
+		}
+		.people {
+			position: relative;
+			font-family: 'Gilroy', 'Gilroy-Bold', 'Gilroy-Medium', 'Gilroy-Regular', Arial, sans-serif !important;
+			text-align: center;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin: 0;
+			padding: 0;
+			width: 120px;
+			height: 140px;
+			background: none;
+			box-sizing: border-box;
+			justify-content: flex-end;
+		}
+		.avatar {
+			position: absolute;
+			z-index: 1;
+			width: 120px;
+			height: 140px;
+			border-radius: 16px 16px 0 0;
+			overflow: hidden;
+			display: block;
+			background-size: cover;
+			background-position: center;
+			box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
+			margin: 0;
+			top: -55px;
+			left: 0;
+		}
+		/* --- Обертка для бейджей, чтобы они были над фото --- */
+		.badges-wrapper {
+			position: absolute;
+			top: -55px;
+			left: 0;
+			width: 120px;
+			height: 140px;
+			pointer-events: none;
+			z-index: 5;
+		}
+		.role-badge {
+			position: absolute;
+			left: -13px;
+			top: -8px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 38px;
+			height: 38px;
+			font-weight: 700;
+			font-size: 1em;
+			color: #fff;
+			text-shadow: 0 1px 4px rgba(0,0,0,0.19);
+			z-index: 5;
+			animation: badge-pulse 1.8s infinite cubic-bezier(.4,0,.6,1), badge-glow 2.3s infinite linear;
+			user-select: none;
+			box-sizing: border-box;
+			border-radius: 50%;
+			border: 2.5px solid #ae8cff;
+			box-shadow: 0 0 22px 6px #ae8cff99, 0 3px 14px rgba(0,0,0,0.16);
+			background: var(--role-bg, #1C1C1C);
+			background: linear-gradient(135deg, var(--role-bg, #1C1C1C) 80%, #2d2d2d 100%);
+			transition: box-shadow 0.3s;
+		}
+		.role-badge--sheriff { --role-bg: #E63946; }
+		.role-badge--mafia   { --role-bg: #1C1C1C; }
+		.role-badge--don     { --role-bg: #1C1C1C; }
+		.status-badge {
+			position: absolute;
+			right: -13px;
+			top: -8px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 38px;
+			height: 38px;
+			font-size: 1.3em;
+			color: #fff;
+			z-index: 5;
+			border-radius: 50%;
+			border: 2.5px solid #ae8cff;
+			box-shadow: 0 0 22px 6px #ae8cff99, 0 3px 14px rgba(0,0,0,0.16);
+			background: #1C1C1C !important;
+			animation: badge-pulse 1.8s infinite cubic-bezier(.4,0,.6,1), badge-glow 2.3s infinite linear;
+			transition: box-shadow 0.3s;
+		}
+		.status-badge--die {
+			color: #ae8cff;
+			font-size: 1.6em;
+		}
+		.status-badge--like {
+			color: #ae8cff;
+		}
+		@keyframes badge-pulse {
+			0% { transform: scale(1);}
+			50% { transform: scale(1.09);}
+			100% { transform: scale(1);}
+		}
+		@keyframes badge-glow {
+			0%, 100% { box-shadow: 0 0 22px 6px #ae8cff99, 0 3px 14px rgba(0,0,0,0.16);}
+			50%      { box-shadow: 0 0 34px 10px #ae8cffcc, 0 3px 14px rgba(0,0,0,0.16);}
+		}
+		/* --- Плашки инфо/порядка --- */
+		.maf-info-panel {
+			position: absolute;
+			min-width: 50px;
+			max-width: 60vw;
+			min-height: 36px;
+			font-size: 1.05em;
+			font-family: 'Gilroy', 'Gilroy-Bold', 'Gilroy-Medium', 'Gilroy-Regular', Arial, sans-serif !important;
+			font-weight: 700;
+			letter-spacing: 0.02em;
+			padding: var(--maf-panel-padding);
+			background: var(--maf-panel-bg-dark2);
+			color: #fff;
+			border-radius: 18px !important;
+			box-shadow: var(--maf-panel-glow), var(--maf-panel-shadow);
+			border: var(--maf-panel-border-width) solid transparent;
+			background-clip: padding-box, border-box;
+			border-image: var(--maf-panel-border) 1;
+			transition:
+					box-shadow 0.45s cubic-bezier(.44,0,.42,1),
+					border 0.45s cubic-bezier(.44,0,.42,1),
+					background 0.45s cubic-bezier(.44,0,.42,1),
+					color 0.25s;
+			overflow: hidden;
+			filter: drop-shadow(0 2px 14px #5b3e9c50);
+			display: flex;
+			align-items: center;
+			gap: 16px;
+			opacity: 1;
+			animation: var(--maf-panel-fadein);
+		}
+		.maf-info-panel-leave {
+			animation: var(--maf-panel-fadeout);
+			opacity: 0 !important;
+			pointer-events: none !important;
+		}
+		.maf-info-panel.main {
+			top: 32px;
+			left: 50%;
+			transform: translateX(-50%);
+			justify-content: center;
+			text-align: center;
+			border-radius: 18px !important;
+		}
+		.maf-info-panel.additional {
+			top: 32px;
+			left: 32px;
+			justify-content: flex-start;
+			text-align: left;
+			font-size: 0.99em;
+			border-radius: 18px !important;
+		}
+		.maf-info-panel.statuses {
+			top: 32px;
+			right: 32px;
+			justify-content: flex-end;
+			text-align: right;
+			font-size: 1.09em;
+			min-width: 182px;
+			max-width: 60vw;
+			padding-left: 24px;
+			padding-right: 24px;
+			gap: 18px;
+			border-radius: 18px !important;
+		}
+		@keyframes mafFadeIn {
+			from { opacity: 0; transform: scale(0.97) translateY(-18px);}
+			to { opacity: 1; transform: scale(1) translateY(0);}
+		}
+		@keyframes mafFadeOut {
+			from { opacity: 1; transform: scale(1) translateY(0);}
+			to { opacity: 0; transform: scale(0.96) translateY(-18px);}
+		}
+		.maf-anim-text {
+			display: inline-block;
+			transition: color 0.23s, filter 0.23s;
+			animation: mafTextFade 0.44s;
+		}
+		@keyframes mafTextFade {
+			from { opacity: 0; filter: blur(6px);}
+			to   { opacity: 1; filter: blur(0);}
+		}
+		.maf-anim-list {
+			display: inline-block;
+			animation: mafListFade 0.6s;
+		}
+		@keyframes mafListFade {
+			from { opacity: 0; transform: translateY(-16px) scale(0.95);}
+			to   { opacity: 1; transform: translateY(0) scale(1);}
+		}
+		.status-icon {
+			display: inline-block;
+			vertical-align: middle;
+			margin-right: 7px;
+			margin-left: 4px;
+			font-size: 1.13em;
+			filter: drop-shadow(0 0 6px #ae8cff60);
+		}
+		.status-icon.status-die { color: #ae8cff; }
+		.status-icon.status-vote { color: #ae8cff !important; filter: drop-shadow(0 0 7px #ae8cff88);}
+		/* --- Кастомизация панели игроков --- */
+		.people-name-box {
+			width: 120px;
+			background-color: #111;
+			color: white;
+			padding: 6px 0;
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			border-radius: 0 0 16px 16px;
+			box-sizing: border-box;
+			margin: 0;
+			display: block;
+		}
+		.people-name-index {
+			font-weight: 800;
+			font-size: 1em;
+			color: var(--md3-primary, #ae8cff);
+			position: absolute;
+			left: 6px;
+			top: 50%;
+			transform: translateY(-50%);
+			z-index: 3;
+			pointer-events: none;
+		}
+		.people-name-wrapper {
+			width: 100%;
+			position: relative;
+			overflow: hidden;
+			white-space: nowrap;
+			padding-left: 28px;
+			padding-right: 6px;
+			box-sizing: border-box;
+		}
+		.people-name {
+			font-size: 1em;
+			font-weight: 600;
+			color: #fff;
+			text-shadow: 0 1px 4px rgba(0,0,0,0.12);
+			display: block;
+			animation: none !important; /* ОТМЕНА СКРОЛЛА */
+			transition: font-size 0.2s ease;
+		}
+		.people-name[data-scroll="true"] {
+			animation: none !important;
+		}
+		.people {
+			position: relative;
+			width: 120px;
+			height: 140px;
+			padding: 0;
+			margin: 0;
+			background: none;
+			display: block;
+		}
+		.avatar {
+			position: absolute;
+			top: -55px; left: 0;
+			width: 120px;
+			height: 140px;
+			border-radius: 16px 16px 0 0;
+			margin: 0;
+			z-index: 1;
+		}
+		.people-name-box {
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 120px;
+			border-radius: 0 0 16px 16px;
+			z-index: 2;
+			margin: 0;
+		}
+
+		/* --- АНИМИРОВАННАЯ ПОДСВЕТКА игрока --- */
+		.people.highlighted {
+			position: relative;
+			z-index: 10;
+		}
+
+		.people.highlighted::before {
+			content: '';
+			position: absolute;
+			top: -60px;
+			left: -4px;
+			right: 60px;
+			bottom: 4px;
+			border-radius: 20px 20px 0 0;
+			border: 2px solid transparent;
+			background-clip: padding-box;
+			pointer-events: none;
+			opacity: 0;
+			animation:
+					highlight-glow 2s infinite ease-in-out,
+					highlight-fade-in 0.5s forwards;
+			z-index: 4; /* Ниже бейджей (z-index:5), но выше аватара (z-index:1) */
+		}
+
+		.people.highlighted.highlight-fade-out::before {
+			animation:
+					highlight-glow 2s infinite ease-in-out,
+					highlight-fade-out 0.5s forwards;
+		}
+
+		@keyframes highlight-glow {
+			0%, 100% {
+				box-shadow:
+						0 0 5px 2px rgba(174, 140, 255, 0.4),
+						0 0 15px 5px rgba(174, 140, 255, 0.2);
+				border-color: rgba(174, 140, 255, 0.5);
+			}
+			50% {
+				box-shadow:
+						0 0 10px 4px rgba(174, 140, 255, 0.6),
+						0 0 25px 8px rgba(174, 140, 255, 0.3);
+				border-color: rgba(174, 140, 255, 0.8);
+			}
+		}
+
+		@keyframes highlight-fade-in {
+			from { opacity: 0; transform: scale(0.98); }
+			to { opacity: 1; transform: scale(1); }
+		}
+
+		@keyframes highlight-fade-out {
+			from { opacity: 1; transform: scale(1); }
+			to { opacity: 0; transform: scale(0.98); }
+		}
+
+		/* Убедимся, что бейджи остаются поверх свечения */
+		.badges-wrapper {
+			z-index: 11; /* Выше чем свечение */
+		}
+	</style>
 </head>
 <body>
 <div class="darker"></div>
 
 <div id="app">
-	<div v-if="peoples?.length" class="wrap flex flex-50">
-		<people-comp v-for="(people, index) in peoples" :index="index + 1" :value="people"></people-comp>
-	</div>
-
+	<!-- Информационные панели сверху, с переходами -->
+	<transition name="maf-info-panel" mode="out-in">
+		<div v-if="panelState.mainInfoVisible && panelState.mainInfoText"
+			 class="maf-info-panel main"
+			 :key="'main'">
+			<span class="maf-anim-text" v-html="mainInfoAnimated"></span>
+		</div>
+	</transition>
+	<transition name="maf-info-panel" mode="out-in">
+		<div v-if="panelState.additionalInfoVisible && panelState.additionalInfoText"
+			 class="maf-info-panel additional"
+			 :key="'additional'">
+			<span class="maf-anim-text" v-html="additionalInfoAnimated"></span>
+		</div>
+	</transition>
+	<transition name="maf-info-panel" mode="out-in">
+		<div v-if="!panelState.hideLeaveOrder && (leaveOrder.die.length || leaveOrder.vote.length)"
+			 class="maf-info-panel statuses"
+			 :key="'statuses'">
+			<span class="maf-anim-list">
+				<i class="fas fa-skull-crossbones status-icon status-die"></i>
+				<span v-if="leaveOrder.die.length">
+					{{ dieTextLabel }}:
+					<b>{{leaveOrder.die.join(', ')}}</b>
+				</span>
+				<span v-else style="color:#888;">Нет убитых</span>
+			</span>
+			<span class="maf-anim-list" style="margin-left:12px;">
+				<i class="mdi mdi-thumb-up-outline status-icon status-vote"></i>
+				<span v-if="leaveOrder.vote.length">
+					{{ voteTextLabel }}:
+					<b>{{leaveOrder.vote.join(', ')}}</b>
+				</span>
+				<span v-else style="color:#888;">Нет заголосованных</span>
+			</span>
+		</div>
+	</transition>
+	<!-- Основная зона игроков -->
+	<transition name="maf-panel-fade" mode="out-in">
+		<div v-if="peoples?.length && !panelState.hideSeating" class="wrap flex flex-50" style="margin-top:120px;">
+			<people-comp v-for="(people, index) in peoples"
+						 :index="index + 1"
+						 :value="people"
+						 :hide-roles-status="panelState.hideRolesStatus"
+						 :highlighted-player="highlightedPlayer"
+						 :key="people.roleKey"></people-comp>
+		</div>
+	</transition>
 </div>
 
+<script>
+	Vue.component('role-badge', {
+		props: ['role', 'hide'],
+		computed: {
+			badgeLetter() {
+				switch (this.role) {
+					case 'don': return 'Д';
+					case 'sheriff': return 'Ш';
+					case 'black': return 'М';
+					default: return '';
+				}
+			},
+			badgeClass() {
+				switch (this.role) {
+					case 'don': return 'role-badge role-badge--don';
+					case 'sheriff': return 'role-badge role-badge--sheriff';
+					case 'black': return 'role-badge role-badge--mafia';
+					default: return '';
+				}
+			}
+		},
+		template: `<div v-if="badgeLetter && !hide" :class="badgeClass">{{ badgeLetter }}</div>`
+	});
 
-<script !src="">
+	Vue.component('status-badge', {
+		props: ['status', 'hide'],
+		computed: {
+			statusClass() {
+				switch (this.status) {
+					case 'die': return 'status-badge status-badge--die';
+					case 'like': return 'status-badge status-badge--like';
+					default: return 'status-badge';
+				}
+			},
+			iconHtml() {
+				switch (this.status) {
+					case 'die': return '<i class="mdi mdi-crosshairs-gps"></i>';
+					case 'like': return '<i class="mdi mdi-thumb-up-outline" style="color:#ae8cff"></i>';
+					default: return '';
+				}
+			},
+			show() {
+				return (this.status === 'die' || this.status === 'like') && !this.hide;
+			}
+		},
+		template: `<div v-if="show" :class="statusClass" v-html="iconHtml"></div>`
+	});
 
 	Vue.component('people-comp', {
-		props: ['value', 'index'],
-		methods: {
-			/*roleClassFn: (roleID) => {
-				switch (roleID) {
-					case 'sheriff':
-						return 'ico-sheriff';
-					case 'don':
-						return 'ico-don';
-					case 'black':
-						return 'ico-black';
-					default:
-						return 'ico-red';
-				}
-			},*/
-
-
+		props: ['value', 'index', 'hideRolesStatus', 'highlightedPlayer'],
+		data() {
+			return {
+				isHighlighted: false
+			}
 		},
-		computed: {
-			roleClass: function () {
-				// return this.roleClassFn(this.value.role);
-
-				switch (this.value.role) {
-					case 'sheriff':
-						return 'ico-sheriff';
-					case 'don':
-						return 'ico-don';
-					case 'black':
-						return 'ico-black';
-					default:
-						return 'ico-red';
+		watch: {
+			highlightedPlayer: {
+				immediate: true,
+				handler(newVal) {
+					const shouldHighlight = newVal === this.value.roleKey;
+					if (shouldHighlight && !this.isHighlighted) {
+						this.isHighlighted = true;
+					} else if (!shouldHighlight && this.isHighlighted) {
+						// Добавляем класс для анимации исчезновения
+						this.$el.classList.add('highlight-fade-out');
+						setTimeout(() => {
+							this.isHighlighted = false;
+							this.$el.classList.remove('highlight-fade-out');
+						}, 500); // Длительность анимации исчезновения
+					}
 				}
-
 			}
 		},
 		template: `
-		<div class="people" :class="{die: value.action}">
-			<div class="avatar" :style='{backgroundImage: value.avatarCss}'></div>
-          <div class="people-name-box">
-            <div class="people-name-index">{{index}}</div>
-            <div class="people-name">{{value.login}}</div>
-		  </div>
-
-			<div class="people-role" :class="[roleClass]"></div>
-		</div>
-  `
+			<div class="people" :class="{
+				'highlighted': isHighlighted,
+				'die': value.action
+			}">
+				<div class="avatar" :style='{backgroundImage: value.avatarCss}'></div>
+				<div class="badges-wrapper">
+					<role-badge :role="value.role" :hide="hideRolesStatus" />
+					<status-badge :status="value.action" :hide="hideRolesStatus" />
+				</div>
+				<div class="people-name-box">
+					<div class="people-name-index">{{index}}</div>
+					<div class="people-name-wrapper">
+						<div class="people-name">{{value.login}}</div>
+					</div>
+				</div>
+			</div>
+		`
 	});
 
 	const app = new Vue({
 		el: '#app',
-		methods: {
-		},
 		data: {
 			peoples: undefined,
+			panelState: {
+				mainInfoText: "",
+				additionalInfoText: "",
+				mainInfoVisible: true,
+				additionalInfoVisible: true,
+				hideSeating: false,
+				hideLeaveOrder: false,
+				hideRolesStatus: false,
+			},
+			mainInfoAnimated: "",
+			additionalInfoAnimated: "",
+			prevMainInfo: "",
+			prevAdditionalInfo: "",
+			leaveOrderAnimated: {die:[], vote:[]},
+			leaveOrderPrev: {die:[], vote:[]},
+			leaveOrderAnimKey: 0,
+			highlightedPlayer: null
+		},
+		watch: {
+			'panelState.mainInfoText':{
+				immediate:true,
+				handler(val) {
+					if(val!==this.prevMainInfo){
+						this.mainInfoAnimated = this.animText(val);
+						this.prevMainInfo = val;
+					}
+				}
+			},
+			'panelState.additionalInfoText':{
+				immediate:true,
+				handler(val) {
+					if(val!==this.prevAdditionalInfo){
+						this.additionalInfoAnimated = this.animText(val);
+						this.prevAdditionalInfo = val;
+					}
+				}
+			},
+			leaveOrder: {
+				handler(newVal) {
+					if (
+							JSON.stringify(newVal.die) !== JSON.stringify(this.leaveOrderPrev.die) ||
+							JSON.stringify(newVal.vote) !== JSON.stringify(this.leaveOrderPrev.vote)
+					) {
+						this.leaveOrderAnimated = {
+							die: [...newVal.die],
+							vote: [...newVal.vote]
+						};
+						this.leaveOrderPrev = {
+							die: [...newVal.die],
+							vote: [...newVal.vote]
+						};
+						this.leaveOrderAnimKey++;
+					}
+				},
+				deep: true,
+				immediate: true
+			}
+		},
+		computed: {
+			leaveOrder() {
+				const die = [], vote = [];
+				if (this.peoples && this.peoples.length) {
+					this.peoples.forEach((p, idx) => {
+						if (p.action === 'die') die.push(idx + 1);
+						if (p.action === 'like') vote.push(idx + 1);
+					});
+				}
+				return { die, vote };
+			},
+			dieTextLabel() {
+				const n = this.leaveOrder.die.length;
+				if (n === 1) return "Убит";
+				if (n > 1) return "Убиты";
+				return "Убит";
+			},
+			voteTextLabel() {
+				const n = this.leaveOrder.vote.length;
+				if (n === 1) return "Заголосован";
+				if (n > 1) return "Заголосованы";
+				return "Заголосован";
+			}
+		},
+		methods: {
+			animText(txt) {
+				if (!txt) return "";
+				return txt.split("").map((l,i) => `<span class="maf-anim-text" style="animation-delay:${i*0.018}s">${l===" "?"&nbsp;":l}</span>`).join("");
+			}
 		}
 	});
 
 	const bcChannel = new BroadcastChannel("maf-panel");
 	bcChannel.onmessage = ev => {
-		// console.log('!!!!!!!!!!!', ev?.data);
-		app.peoples = ev?.data?.tableOut;
+		if (ev.data?.tableOut) {
+			app.peoples = ev.data.tableOut;
+		}
+		if (ev.data?.panelState) {
+			app.panelState = Object.assign({}, app.panelState, ev.data.panelState);
+		}
+		if (ev.data?.highlightedPlayer !== undefined) {
+			app.highlightedPlayer = ev.data.highlightedPlayer;
+		}
 	};
 </script>
-<template>
-	<div class="people" :class="{die: value.action}">
-		<div class="avatar" :style='{backgroundImage: value.avatarCss}'></div>
-		<div class="people-name-box">
-			<div class="people-name-index">{{index}}</div>
-			<div class="people-name">{{value.login}}</div>
-		</div>
-
-		<div class="people-role" :class="[roleClass]"></div>
-
-		<!-- Иконка убийства -->
-		<img v-if="value.action === 'die'" src="/icon/killed.png" class="killed-icon" alt="Killed Icon">
-	</div>
-</template>
 </body>
 </html>
